change in wista

--- a/work-integrated-skill-training-apprenticeship.html
+++ b/work-integrated-skill-training-apprenticeship.html
@@ -71,7 +71,7 @@
             	<li><a href="about-staffing-services-company-delhi-ncr.html">About Group</a></li>
 				      <li><a href="group_companies_mangos.html">Group Companies</a></li>
             	<li><a href="centre-of-excellence.html">Centre of Excellence</a></li>
-              <li><a href="https://agri.mangosorange.com/" target="_blank">Agritech</a></li>
+              <li><a href="https://mangosorangeagritech.in/" target="_blank">Agritech</a></li>
             </ul>
           </li>
           <li class="drop-down"><a href="services-staffing-solutions-manpower-company-delhi-ncr.html">Our Services</a>
